# Onyx_Data-challenge

./: .gitignore  README.md  pyproject.toml
October_challenge/: business_case.py  data_extract.py  eda.py
dataset/: DataLakeDestnation_01.json  SqlServerSourceLS_01.json
linkedService/: AzureKeyVault1.json  SQLserveronpremlinkedserv_01.json
pipeline/: Data_ingest_01.json
